Update resume and site url

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "Fabio Jun <fabiojundev@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/fabiojundev/resume"
+    "url": "https://github.com/fabiojundev/fabiojundev.github.io/"
   },
   "keywords": [
     "gatsby"
